packages/parser/test/parser/E0121.txt
a := Test{a: 1, b: }
===== err =====
anonymous:1:19: ParseError: E0121 - Expected object expression property value after colon
1 | a := Test{a: 1, b: }
  |                   ^
